exemple de fonctions fléchées

--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
 			</div>
 		</footer>
 
-    <script src="./js/app.js"></script>
+ <!--    <script src="./js/app.js"></script> -->
+    <script src="./js/correction.js"></script>
 	</body>
 </html>
