--- a/index.html
+++ b/index.html
@@ -230,7 +230,8 @@
 			</div>
 		</footer>
 
- <!--    <script src="./js/app.js"></script> -->
-    <script src="./js/correction.js"></script>
+		<!--    <script src="./js/app.js"></script> -->
+		<script src="./js/newsletter.js"></script>
+		<script src="./js/correction.js"></script>
 	</body>
 </html>
