--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
 
 				<section class="slider">
 					<button class="btn slider__btn" type="button" aria-label="Précédent">&lt;</button>
+					<img class="slider__img slider__img--current" src="./img/canyon.jpg" alt="canyon">
+					<img class="slider__img" src="./img/city.jpg" alt="city">
+					<img class="slider__img" src="./img/ski.jpg" alt="ski">
 					<button class="btn slider__btn" type="button" aria-label="Suivant">&gt;</button>
 				</section>
 
@@ -231,6 +234,7 @@
 		</footer>
 
 		<!--    <script src="./js/app.js"></script> -->
+		<script src="./js/slider.js"></script>
 		<script src="./js/newsletter.js"></script>
 		<script src="./js/correction.js"></script>
 	</body>
