--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
 		</footer>
 
 		<!--    <script src="./js/app.js"></script> -->
+		<script src="./js/filter.js"></script>
 		<script src="./js/slider.js"></script>
 		<script src="./js/newsletter.js"></script>
 		<script src="./js/correction.js"></script>
