--- a/index.html
+++ b/index.html
@@ -53,9 +53,12 @@
 
 				<section class="slider">
 					<button class="btn slider__btn" type="button" aria-label="Précédent">&lt;</button>
-					<img class="slider__img slider__img--current" src="./img/canyon.jpg" alt="canyon">
-					<img class="slider__img" src="./img/city.jpg" alt="city">
-					<img class="slider__img" src="./img/ski.jpg" alt="ski">
+					<img class="slider__img slider__img--current" src="./img/canyon.jpg" alt="">
+					<img class="slider__img" src="./img/city.jpg" alt="">
+          <img class="slider__img" src="./img/nature.jpg" alt="">
+          <img class="slider__img" src="./img/ocean.jpg" alt="">
+          <img class="slider__img" src="./img/road.jpg" alt="">
+					<img class="slider__img" src="./img/ski.jpg" alt="">
 					<button class="btn slider__btn" type="button" aria-label="Suivant">&gt;</button>
 				</section>
 
@@ -233,10 +236,9 @@
 			</div>
 		</footer>
 
-		<!--    <script src="./js/app.js"></script> -->
 		<script src="./js/filter.js"></script>
 		<script src="./js/slider.js"></script>
 		<script src="./js/newsletter.js"></script>
-		<script src="./js/correction.js"></script>
+		<script src="./js/app.js"></script>
 	</body>
 </html>
