add legal notice

--- a/index.html
+++ b/index.html
@@ -3,7 +3,19 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Trip O'dvisor</title>
+		<title>Trip O'dvisor - Voyages</title>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebPage",
+        "name": "Trip O'dvisor - Partir en Voyage",
+        "author": {
+          "@type": "Person",
+          "name": "Elodie with O'clock"
+        },
+        "description": "Choisissez quel type de voyage vous souhaitez réaliser : partir à l'aventure, à l'étranger, à la mer, à la montagne, à la campagne. Il y en a pour tous les goûts."
+      }
+      </script>
 		<link rel="stylesheet" href="css/reset.css" />
 		<link rel="stylesheet" href="css/fonts.css" />
 		<link rel="stylesheet" href="css/styles.css" />
@@ -233,12 +245,13 @@
 		<footer class="footer">
 			<div class="container">
 				<p>Toute ressemblance avec d'autres contenus est purement fortuite.</p>
+        <a href='legalnotice.html'>Mentions légales</a>
 			</div>
 		</footer>
 
-		<script src="./js/filter.js"></script>
-		<script src="./js/slider.js"></script>
-		<script src="./js/newsletter.js"></script>
-		<script src="./js/app.js"></script>
+		<script src="./js/filter.js" defer></script>
+		<script src="./js/slider.js" defer></script>
+		<script src="./js/newsletter.js" defer></script>
+		<script src="./js/app.js" defer></script>
 	</body>
 </html>
